# llm-completion-tui

./: .markdownlint.yaml  .pre-commit-config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: api-verification.md  textual-styling.md  web-verification.md
src/: textual
src/_scratch/: subprocess_test.py  todo.py
src/llm_completion_tui/: __init__.py  tui.py
