[project]
name = "llm-completion-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.11"
dependencies = ["textual>=2.1.2"]

[project.scripts]
llm-completion-tui = "llm_completion_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "RUF", # ruff-specific
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
]
ignore = [
    "E501", # line-too-long (handled by formatter)
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Example markdownlint configuration with all properties set to their default value
[tool.markdownlint]
default = true
extends = ""

# MD001/heading-increment : Heading levels should only increment by one level at a time : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md001.md
MD001 = true
# MD005/list-indent : Inconsistent indentation for list items at the same level : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md005.md
MD005 = true
# MD011/no-reversed-links : Reversed link syntax : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md011.md
MD011 = true
# MD014/commands-show-output : Dollar signs used before commands without showing output : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md014.md
MD014 = true
# MD018/no-missing-space-atx : No space after hash on atx style heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md018.md
MD018 = true
# MD019/no-multiple-space-atx : Multiple spaces after hash on atx style heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md019.md
MD019 = true
# MD020/no-missing-space-closed-atx : No space inside hashes on closed atx style heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md020.md
MD020 = true
# MD021/no-multiple-space-closed-atx : Multiple spaces inside hashes on closed atx style heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md021.md
MD021 = true
# MD023/heading-start-left : Headings must start at the beginning of the line : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md023.md
MD023 = true
# MD027/no-multiple-space-blockquote : Multiple spaces after blockquote symbol : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md027.md
MD027 = true
# MD028/no-blanks-blockquote : Blank line inside blockquote : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md028.md
MD028 = true
# MD032/blanks-around-lists : Lists should be surrounded by blank lines : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md032.md
MD032 = false
# MD034/no-bare-urls : Bare URL used : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md034.md
MD034 = true
# MD037/no-space-in-emphasis : Spaces inside emphasis markers : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md037.md
MD037 = true
# MD038/no-space-in-code : Spaces inside code span elements : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md038.md
MD038 = true
# MD039/no-space-in-links : Spaces inside link text : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md039.md
MD039 = true
# MD042/no-empty-links : No empty links : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md042.md
MD042 = true
# MD043/required-headings : Required heading structure : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md043.md
MD043 = false
# MD045/no-alt-text : Images should have alternate text (alt text) : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md045.md
MD045 = true
# MD047/single-trailing-newline : Files should end with a single newline character : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md047.md
MD047 = true
# MD056/table-column-count : Table column count : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md056.md
MD056 = true
# MD058/blanks-around-tables : Tables should be surrounded by blank lines : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md058.md
MD058 = true

# MD003/heading-style : Heading style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md003.md
[tool.markdownlint.MD003]
# Heading style
style = "consistent"
# MD004/ul-style : Unordered list style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md004.md
[tool.markdownlint.MD004]
# List style
style = "consistent"
# MD007/ul-indent : Unordered list indentation : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md007.md
[tool.markdownlint.MD007]
# Spaces for indent
indent = 2
# Whether to indent the first level of the list
start_indented = false
# Spaces for first level indent (when start_indented is set)
start_indent = 2
# MD009/no-trailing-spaces : Trailing spaces : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md009.md
[tool.markdownlint.MD009]
# Spaces for line break
br_spaces = 2
# Allow spaces for empty lines in list items
list_item_empty_lines = false
# Include unnecessary breaks
strict = false
# MD010/no-hard-tabs : Hard tabs : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md010.md
[tool.markdownlint.MD010]
# Include code blocks
code_blocks = true
# Fenced code languages to ignore
ignore_code_languages = []
# Number of spaces for each hard tab
spaces_per_tab = 1
# MD012/no-multiple-blanks : Multiple consecutive blank lines : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md012.md
[tool.markdownlint.MD012]
# Consecutive blank lines
maximum = 1
# MD013/line-length : Line length : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md013.md
[tool.markdownlint.MD013]
# Number of characters
line_length = 80
# Number of characters for headings
heading_line_length = 80
# Number of characters for code blocks
code_block_line_length = 80
# Include code blocks
code_blocks = true
# Include tables
tables = true
# Include headings
headings = true
# Strict length checking
strict = false
# Stern length checking
stern = false
# MD022/blanks-around-headings : Headings should be surrounded by blank lines : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md022.md
[tool.markdownlint.MD022]
# Blank lines above heading
lines_above = 1
# Blank lines below heading
lines_below = 1
# MD024/no-duplicate-heading : Multiple headings with the same content : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md024.md
[tool.markdownlint.MD024]
# Only check sibling headings
siblings_only = false
# MD025/single-title/single-h1 : Multiple top-level headings in the same document : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md025.md
[tool.markdownlint.MD025]
# Heading level
level = 1
# RegExp for matching title in front matter
front_matter_title = "^\\s*title\\s*[:=]"
# MD026/no-trailing-punctuation : Trailing punctuation in heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md026.md
[tool.markdownlint.MD026]
# Punctuation characters
punctuation = ".,;:!。，；：！"
# MD029/ol-prefix : Ordered list item prefix : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md029.md
[tool.markdownlint.MD029]
# List style
style = "one_or_ordered"
# MD030/list-marker-space : Spaces after list markers : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md030.md
[tool.markdownlint.MD030]
# Spaces for single-line unordered list items
ul_single = 1
# Spaces for single-line ordered list items
ol_single = 1
# Spaces for multi-line unordered list items
ul_multi = 1
# Spaces for multi-line ordered list items
ol_multi = 1
# MD031/blanks-around-fences : Fenced code blocks should be surrounded by blank lines : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md031.md
[tool.markdownlint.MD031]
# Include list items
list_items = true
# MD033/no-inline-html : Inline HTML : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md033.md
[tool.markdownlint.MD033]
# Allowed elements
allowed_elements = []
# MD035/hr-style : Horizontal rule style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md035.md
[tool.markdownlint.MD035]
# Horizontal rule style
style = "consistent"
# MD036/no-emphasis-as-heading : Emphasis used instead of a heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md036.md
[tool.markdownlint.MD036]
# Punctuation characters
punctuation = ".,;:!?。，；：！？"
# MD040/fenced-code-language : Fenced code blocks should have a language specified : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md040.md
[tool.markdownlint.MD040]
# List of languages
allowed_languages = []
# Require language only
language_only = false
# MD041/first-line-heading/first-line-h1 : First line in a file should be a top-level heading : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md041.md
[tool.markdownlint.MD041]
# Heading level
level = 1
# RegExp for matching title in front matter
front_matter_title = "^\\s*title\\s*[:=]"
# MD043:
#   # List of headings
#   headings = []
#   # Match case of headings
#   match_case = false
# MD044/proper-names : Proper names should have the correct capitalization : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md044.md
[tool.markdownlint.MD044]
# List of proper names
names = []
# Include code blocks
code_blocks = true
# Include HTML elements
html_elements = true
# MD046/code-block-style : Code block style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md046.md
[tool.markdownlint.MD046]
# Block style
style = "consistent"
# MD048/code-fence-style : Code fence style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md048.md
[tool.markdownlint.MD048]
# Code fence style
style = "consistent"
# MD049/emphasis-style : Emphasis style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md049.md
[tool.markdownlint.MD049]
# Emphasis style
style = "consistent"
# MD050/strong-style : Strong style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md050.md
[tool.markdownlint.MD050]
# Strong style
style = "consistent"
# MD051/link-fragments : Link fragments should be valid : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md051.md
[tool.markdownlint.MD051]
# Ignore case of fragments
ignore_case = false
# MD052/reference-links-images : Reference links and images should use a label that is defined : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md052.md
[tool.markdownlint.MD052]
# Include shortcut syntax
shortcut_syntax = false
# MD053/link-image-reference-definitions : Link and image reference definitions should be needed : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md053.md
[tool.markdownlint.MD053]
# Ignored definitions
ignored_definitions = ["//"]
# MD054/link-image-style : Link and image style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md054.md
[tool.markdownlint.MD054]
# Allow autolinks
autolink = true
# Allow inline links and images
inline = true
# Allow full reference links and images
full = true
# Allow collapsed reference links and images
collapsed = true
# Allow shortcut reference links and images
shortcut = true
# Allow URLs as inline links
url_inline = true
# MD055/table-pipe-style : Table pipe style : https://github.com/DavidAnson/markdownlint/blob/v0.37.4/doc/md055.md
[tool.markdownlint.MD055]
# Table pipe style
style = "consistent"
